# nopo

./: .gitignore  README.md  README_zh.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
src/nopo/: El.py  __init__.py  by.py  el.py  el_parent.py  els.py  pg.py
tests/: conftest.py  test.py  test_nopo.py
