[metadata]
name = nopo
version = 0.1.4
author = DingJunyao
author_email = dingjunyao0703@163.com
description = not only page object: A package for Page Object Model (POM), a tool based on Selenium that helps you build POM in web test.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DingJunyao/nopo
project_urls =
    Source = https://github.com/DingJunyao/nopo
    Bug Tracker = https://github.com/DingJunyao/nopo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src